sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:29: error: 'while' expected but '}' found.
		} while (swap)
                ^AlgCocktailSort1:29: error: ';' expected but 'while' found.
		} while (swap)
                  ^AlgCocktailSort1:31: error: expected class or object definition
Faire
^AlgCocktailSort1:32: error: expected class or object definition
  Pour tout i dans [0,lgr-2], faire:
  ^AlgCocktailSort1:34: error: expected class or object definition
  Pour tout i dans [lgr-2,0] en descendant, faire:
  ^AlgCocktailSort1:36: error: expected class or object definition
tant qu'au moins l'un des parcours a inversé un élément 
^AlgCocktailSort1:39: error: Unmatched closing brace '}' ignored here
}
^